tests/baselines/reference/interfaceMemberValidation.errors.txt
==== tests/cases/compiler/interfaceMemberValidation.ts (8 errors) ====
    interface i1 { name: string; }
    interface i2 extends i1 { name: number; yo: string; }
              ~~
!!! interfaceMemberValidation.ts(2,11): error TS2143: Interface 'i2' cannot extend interface 'i1':
!!! 	Types of property 'name' of types 'i2' and 'i1' are incompatible.
    
    interface foo {
     bar():any;
     ~~~~~~~~~
!!! interfaceMemberValidation.ts(5,2): error TS2171: All named properties must be assignable to string indexer type 'number'.
     bar():any;
     ~~~~~~~~~
!!! interfaceMemberValidation.ts(6,2): error TS2144: Duplicate overload signature for 'bar'.
     ~~~~~~~~~
!!! interfaceMemberValidation.ts(6,2): error TS2171: All named properties must be assignable to string indexer type 'number'.
     new():void;
     ~~~~~~~~~~
!!! interfaceMemberValidation.ts(7,2): error TS2133: Constructors cannot have a return type of 'void'.
     new():void;
     ~~~~~~~~~~
!!! interfaceMemberValidation.ts(8,2): error TS2133: Constructors cannot have a return type of 'void'.
     ~~~~~~~~~~
!!! interfaceMemberValidation.ts(8,2): error TS2147: Duplicate overload construct signature.
     [s:string]:number;
     [s:string]:number;
     ~~~~~~~~~~~~~~~~~
!!! interfaceMemberValidation.ts(10,2): error TS2232: Duplicate string index signature. Additional locations:
!!! 	interfaceMemberValidation.ts(9,2)
    }